Colab を使用して作成されました

--- a/section_2/python_basic_1.ipynb
+++ b/section_2/python_basic_1.ipynb
@@ -73,7 +73,7 @@
         "a = 123\n",
         "print(a)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +121,7 @@
         "b = 123.45\n",
         "print(b)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +168,7 @@
         "c = \"こんにちは、Python！\"\n",
         "print(c)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,7 +221,7 @@
         "number321 = 321\n",
         "print(number321)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +314,7 @@
         "h = a % b\n",
         "print(h)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,13 +369,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5fMSkwA9Qc8F"
+        "id": "5fMSkwA9Qc8F",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "82115a40-2964-45b0-f788-c047dd6d203b"
       },
       "source": [
-        "# 練習用\n"
+        "# 練習用\n",
+        "a = \"Hello\"\n",
+        "b = \"World\"\n",
+        "\n",
+        "c = a + b\n",
+        "print(c)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HelloWorld\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
