Colab を使用して作成されました

--- a/section_2/python_basic_1.ipynb
+++ b/section_2/python_basic_1.ipynb
@@ -373,7 +373,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "82115a40-2964-45b0-f788-c047dd6d203b"
+        "outputId": "6f68ea70-b6de-4e7f-be76-b08a960c6e5b"
       },
       "source": [
         "# 練習用\n",
@@ -381,15 +381,18 @@
         "b = \"World\"\n",
         "\n",
         "c = a + b\n",
-        "print(c)"
+        "d = a * 2\n",
+        "print(c)\n",
+        "print(d)"
       ],
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "HelloWorld\n"
+            "HelloWorld\n",
+            "HelloHello\n"
           ]
         }
       ]
@@ -424,13 +427,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0y-SCphVbDPa"
+        "id": "0y-SCphVbDPa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9fe1dff8-fefb-48c3-ca77-929412425d52"
       },
       "source": [
-        "# 練習用\n"
+        "# 練習用\n",
+        "a = True\n",
+        "b = False\n",
+        "\n",
+        "print(a)\n",
+        "print(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -475,13 +496,50 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "74vLCh-THt4B"
+        "id": "74vLCh-THt4B",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6a33f85b-d20f-44a3-c5e0-2a3d57f72844"
       },
       "source": [
-        "# 練習用\n"
+        "# 練習用\n",
+        "c = 3\n",
+        "d = 4\n",
+        "\n",
+        "e = c > d\n",
+        "print(e)\n",
+        "\n",
+        "f = c < d\n",
+        "print(f)\n",
+        "\n",
+        "g = c >= d\n",
+        "print(g)\n",
+        "\n",
+        "h = c <= d\n",
+        "print(h)\n",
+        "\n",
+        "i = c == d\n",
+        "print(i)\n",
+        "\n",
+        "j = c != d\n",
+        "print(j)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n",
+            "False\n",
+            "True\n",
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -537,13 +595,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "y0qwm9SnM6GZ"
+        "id": "y0qwm9SnM6GZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "162cdcc6-1951-4025-fa4f-26080f4e768c"
       },
       "source": [
-        "# 練習用\n"
+        "# 練習用\n",
+        "a = 3\n",
+        "b = 4\n",
+        "c = 5\n",
+        "\n",
+        "d = a < b and b < c\n",
+        "print(d)\n",
+        "\n",
+        "e = a < b or b < c\n",
+        "print(e)\n",
+        "\n",
+        "f = not a < b\n",
+        "print(f)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
