Colab を使用して作成されました

--- a/section_2/python_basic_2.ipynb
+++ b/section_2/python_basic_2.ipynb
@@ -62,7 +62,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8uCyuQHR_4M0"
+        "id": "8uCyuQHR_4M0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7458f9a9-30be-4b6e-8975-482b57b18627"
       },
       "source": [
         "# 練習用\n",
@@ -72,8 +76,18 @@
         "print(a[1])\n",
         "print(a[2])\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2011\n",
+            "2012\n",
+            "2013\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -101,13 +115,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GCqOwdJPFAb8"
+        "id": "GCqOwdJPFAb8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 182
+        },
+        "outputId": "cde236d3-56d6-4b89-c260-93849310081e"
       },
       "source": [
-        "# 練習用\n"
+        "# 練習用\n",
+        "b = 2016\n",
+        "c = [b, 2017, 20.1, \"Hello\", \"Hi\"]\n",
+        "print{c[1:4]}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'builtin_function_or_method' object is not subscriptable",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-408035928.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2016\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2017\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Hello\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Hi\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
