Colab を使用して作成されました

--- a/section_2/python_basic_2.ipynb
+++ b/section_2/python_basic_2.ipynb
@@ -117,28 +117,23 @@
       "metadata": {
         "id": "GCqOwdJPFAb8",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 182
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cde236d3-56d6-4b89-c260-93849310081e"
+        "outputId": "2a61e3f2-2c06-4891-89c1-ad3bd6ec1c26"
       },
       "source": [
         "# 練習用\n",
         "b = 2016\n",
         "c = [b, 2017, 20.1, \"Hello\", \"Hi\"]\n",
-        "print{c[1:4]}"
+        "print(c[1:4])"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "'builtin_function_or_method' object is not subscriptable",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-408035928.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2016\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2017\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Hello\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Hi\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2017, 20.1, 'Hello']\n"
           ]
         }
       ]
@@ -167,13 +162,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ScUcc8ycGXrW"
+        "id": "ScUcc8ycGXrW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "11f2ed58-bbd6-4c15-b79a-0bb8049abfc3"
       },
       "source": [
-        "# 練習用\n"
+        "# 練習用\n",
+        "d = [[2012, 2013, 2014], [2015, 2016, 2017]]\n",
+        "print(d[0])\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2012, 2013, 2014]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -211,7 +220,15 @@
         "id": "XqeoFPxMqNwb"
       },
       "source": [
-        "# 練習用\n"
+        "# 練習用\n",
+        "e = [\"py\", 543.21, 79, \"thon\", [2018, 2019, 2020]]\n",
+        "print(e)\n",
+        "\n",
+        "e[2] = 99\n",
+        "print(e)\n",
+        "\n",
+        "e.append(2021)\n",
+        "print(e)"
       ],
       "execution_count": null,
       "outputs": []
