Colab を使用して作成されました

--- a/section_2/python_basic_2.ipynb
+++ b/section_2/python_basic_2.ipynb
@@ -217,7 +217,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XqeoFPxMqNwb"
+        "id": "XqeoFPxMqNwb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f34251c5-1d81-44ef-b001-70f0bb75c399"
       },
       "source": [
         "# 練習用\n",
@@ -230,8 +234,18 @@
         "e.append(2021)\n",
         "print(e)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['py', 543.21, 79, 'thon', [2018, 2019, 2020]]\n",
+            "['py', 543.21, 99, 'thon', [2018, 2019, 2020]]\n",
+            "['py', 543.21, 99, 'thon', [2018, 2019, 2020], 2021]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -291,7 +305,24 @@
         "id": "htyvMHuSqsEf"
       },
       "source": [
-        "# 練習用\n"
+        "# 練習用\n",
+        "a = [2012, 2013, 2014]\n",
+        "b = (2012, 2013, 2014)\n",
+        "\n",
+        "print(a)\n",
+        "print(b)\n",
+        "\n",
+        "print(a[1])\n",
+        "print(b[1])\n",
+        "\n",
+        "b[1] = 2016 #error\n",
+        "print(b)\n",
+        "\n",
+        "a.append(2015)\n",
+        "print(a)\n",
+        "\n",
+        "b.append(2015) #error\n",
+        "print(b)"
       ],
       "execution_count": null,
       "outputs": []
