--- a/section_2/python_basic_2.ipynb
+++ b/section_2/python_basic_2.ipynb
@@ -302,7 +302,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "htyvMHuSqsEf"
+        "id": "htyvMHuSqsEf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ab3ef76e-d973-48d5-a540-d927255e742d"
       },
       "source": [
         "# 練習用\n",
@@ -315,17 +319,30 @@
         "print(a[1])\n",
         "print(b[1])\n",
         "\n",
-        "b[1] = 2016 #error\n",
-        "print(b)\n",
+        "#b[1] = 2016 #error\n",
+        "#print(b)\n",
         "\n",
         "a.append(2015)\n",
         "print(a)\n",
         "\n",
-        "b.append(2015) #error\n",
+        "#b.append(2015) #error\n",
         "print(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2012, 2013, 2014]\n",
+            "(2012, 2013, 2014)\n",
+            "2013\n",
+            "2013\n",
+            "[2012, 2013, 2014, 2015]\n",
+            "(2012, 2013, 2014)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
