--- a/section_2/python_basic_2.ipynb
+++ b/section_2/python_basic_2.ipynb
@@ -319,14 +319,14 @@
         "print(a[1])\n",
         "print(b[1])\n",
         "\n",
-        "#b[1] = 2016 #error\n",
-        "#print(b)\n",
+        "# b[1] = 2016 #error\n",
+        "# print(b)\n",
         "\n",
         "a.append(2015)\n",
         "print(a)\n",
         "\n",
-        "#b.append(2015) #error\n",
-        "print(b)"
+        "# b.append(2015) #error\n",
+        "# print(b)"
       ],
       "execution_count": 9,
       "outputs": [
